# yt-dlp-desktop

./: .gitignore  CLAUDE.md  PRODUCT_DESIGN.md  README.md  TODO.md  index.html  package-lock.json  package.json  supportedsites.md  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  config.rs  export.rs  lib.rs  main.rs  queue.rs  updater.rs
src-tauri/src/commands/: download.rs  mod.rs  settings.rs  video_info.rs
src-tauri/src/database/: mod.rs  models.rs
src-tauri/src/downloader/: douyin.rs  mod.rs  ytdlp.rs
src-tauri/src/ytdlp/: binary.rs  mod.rs  parser.rs  process.rs
src/assets/styles/: main.css
src/components/: BatchPreview.vue  ClipboardAlert.vue  DownloadItem.vue  DownloadOptions.vue  PlaylistSelector.vue  ProgressBar.vue  SettingsForm.vue  TitleBar.vue  UrlInput.vue  VideoPreview.vue
src/stores/: download.ts  settings.ts
src/utils/: errors.ts  i18n.ts  invoke.ts  theme.ts
src/views/: DownloadView.vue  QueueView.vue  SettingsView.vue
