[package]
name = "yt-dlp-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
url = "2"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
[build-dependencies]
tauri-build = { version = "2", features = [] }
